ont-api: move methods related to OntGraphModel from Models to OntModels (issue #78)